[gd_scene load_steps=5 format=3 uid="uid://bdtk1as60blo3"]

[ext_resource type="Script" uid="uid://bhgyg0l83a34d" path="res://Main_Game_Features/entities/door/door.gd" id="1_1o1iq"]
[ext_resource type="Texture2D" uid="uid://c2hv14o5xe6lq" path="res://Resources/debugTextures/door.png" id="2_0sp7p"]
[ext_resource type="Script" uid="uid://btt631nghed63" path="res://Main_Game_Features/power_functions/Power_Node.gd" id="3_0sp7p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1o1iq"]
size = Vector2(325, 576)

[node name="door" type="Node2D"]
script = ExtResource("1_1o1iq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0sp7p")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1.5, 1)
shape = SubResource("RectangleShape2D_1o1iq")

[node name="Power_Node" type="Node" parent="."]
script = ExtResource("3_0sp7p")
metadata/_custom_type_script = "uid://btt631nghed63"

[connection signal="off_state" from="Power_Node" to="." method="open_door"]
[connection signal="on_state" from="Power_Node" to="." method="close_door"]
